# fastapi-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  tempapp.env
db/initdb/: 1_create_database.sql  2_create_schema.sql
src/tempapp/: main.py
tests/: conftest.py
tests/tset_views/: test_healthcheck.py
